--- a/configure.ac
+++ b/configure.ac
@@ -7,8 +7,8 @@ define([PRODUCT_TARNAME], [opensc])
 define([PRODUCT_BUGREPORT], [opensc-devel@lists.sourceforge.net])
 define([PACKAGE_VERSION_MAJOR], [0])
 define([PACKAGE_VERSION_MINOR], [13])
-define([PACKAGE_VERSION_FIX], [0])
-define([PACKAGE_SUFFIX], [])
+define([PACKAGE_VERSION_FIX], [1])
+define([PACKAGE_SUFFIX], [rc1])
 define([PACKAGE_VERSION_REVISION], [0])
 
 define([VS_FF_LEGAL_COPYRIGHT], [OpenSC Project])
