Add support for the IsoApplet (Java Card applet)
The IsoApplet can be found here:
https://github.com/philipWendland/IsoApplet
Add read/write support for this applet, including RSA and
ECC support.

--- a/src/pkcs15init/Makefile.am
+++ b/src/pkcs15init/Makefile.am
@@ -29,7 +29,8 @@ dist_pkgdata_DATA = \
 	iasecc.profile \
 	ias_adele_admin1.profile ias_adele_admin2.profile ias_adele_common.profile \
 	iasecc_generic_pki.profile iasecc_admin_eid.profile iasecc_generic_oberthur.profile \
-	openpgp.profile sc-hsm.profile
+	openpgp.profile sc-hsm.profile \
+	isoApplet.profile
 
 AM_CPPFLAGS = -DSC_PKCS15_PROFILE_DIRECTORY=\"$(pkgdatadir)\" \
 	-I$(top_srcdir)/src
@@ -46,4 +47,5 @@ libpkcs15init_la_SOURCES = \
 	pkcs15-rtecp.c pkcs15-myeid.c \
 	pkcs15-oberthur.c pkcs15-oberthur-awp.c \
 	pkcs15-authentic.c pkcs15-iasecc.c pkcs15-openpgp.c \
-	pkcs15-sc-hsm.c
+	pkcs15-sc-hsm.c \
+	pkcs15-isoApplet.c
