Fix secure messaging library name on Mac OS X
Mac OS X uses "libsmm-local.3.dylib" as library name. The default value
"libsmm-local.so.3" is correct for Linux but not for Mac OS X.

This bug prevented the "opensc-tool -a" to work correctly and return the
ATR if an IAS card is present in the reader.

--- a/configure.ac
+++ b/configure.ac
@@ -365,6 +365,9 @@ if test "${enable_sm}" = "yes"; then
 		*-mingw*|*-winnt*|*-cygwin*)
 			DEFAULT_SM_MODULE="smm-local.dll"
 		;;
+		*-apple-*)
+			DEFAULT_SM_MODULE="libsmm-local.3.dylib"
+		;;
 		*)
 			DEFAULT_SM_MODULE="libsmm-local.so.3"
 		;;
