--- a/doc/tools/Makefile.am
+++ b/doc/tools/Makefile.am
@@ -10,6 +10,9 @@ man1_MANS = $(patsubst $(srcdir)/%.xml, %, $(wildcard $(srcdir)/*.1.xml))
 man5_MANS = $(patsubst $(srcdir)/%.xml, %, $(wildcard $(srcdir)/*.5.xml))
 endif
 
+completion_DATA = $(patsubst $(srcdir)/%.1.xml, %, $(wildcard $(srcdir)/*.1.xml))
+completiondir = $(sysconfdir)/bash_completion.d
+
 tools.html: $(srcdir)/tools.xml $(wildcard $(srcdir)/*.1.xml) $(wildcard $(srcdir)/*.5.xml)
 	$(XSLTPROC) --nonet --path "$(srcdir)/..:$(xslstylesheetsdir)/html" --xinclude -o $@ html.xsl $<
 
@@ -21,5 +24,21 @@ tools.html: $(srcdir)/tools.xml $(wildcard $(srcdir)/*.1.xml) $(wildcard $(srcdi
 	sed -e 's|@pkgdatadir[@]|$(pkgdatadir)|g' < $< \
 	| $(XSLTPROC) --nonet --path "$(srcdir)/..:$(xslstylesheetsdir)/manpages" --xinclude -o $@ man.xsl $<
 
+%: $(srcdir)/%.1.xml
+	echo $< $@
+	cat completion-template \
+		| sed "s,ALLOPTS,\
+			$(shell sed -n 's,\s\s\s*<option>\([^<]*\)</option>.*,\1,pg' $< \
+				| sort -u | grep -- '^\-' | tr '\n' ' ')," \
+		| sed "s,OPTSWITHARGS,\
+			$(shell sed -n 's,\s\s\s*<option>\([^<]*\)</option>.*<replaceable>.*,\1,pg' $< \
+				| sort -u | grep -- '^\-' | tr '\n' '|' | sed 's,|$$,,')," \
+		| sed "s,FILEOPTS,\
+			$(shell sed -n 's,\s\s\s*<option>\([^<]*\)</option>.*<replaceable>.*filename.*,\1,pg' $< \
+				| sort -u | grep -- '^\-' | tr '\n' '|')," \
+		| sed "s,FUNCTION_NAME,$(shell echo $@ | sed s,-,_,g)," \
+		| sed "s,PROGRAM_NAME,$@," \
+		> $@
+
 clean-local:
-	-rm -rf $(html_DATA) $(man1_MANS) $(man5_MANS)
+	-rm -rf $(html_DATA) $(man1_MANS) $(man5_MANS) $(completion_DATA)
