make file cache dir configurable
in cases where you use pam_pkcs11, HOME might not be set
so paths based on $HOME are not usable, so that the combination
of home and caching does not work. Having the paths configurable
(together with a good setting of access rights)
resolves that problem.

--- a/etc/opensc.conf.in
+++ b/etc/opensc.conf.in
@@ -431,6 +431,12 @@ app default {
 		# Default: false
 		# use_file_caching = true;
 		#
+		# set a path for caching 
+		# so you do not use the env variables and for pam_pkcs11
+		# (with certificate check)  where $HOME is not set
+		# Default: path in user home
+		# file_cache_dir = /var/lib/opensc/cache	
+                #
 		# Use PIN caching?
 		# Default: true
 		# use_pin_caching = false;
