--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
 
 before_install:
   - if [ $TRAVIS_OS_NAME == linux ]; then
-      sudo apt-get update;
+      sudo apt-get update || true;
     fi
 
 install:
