silence some shell commands in Makefile

--- a/doc/tools/Makefile.am
+++ b/doc/tools/Makefile.am
@@ -25,8 +25,8 @@ tools.html: $(srcdir)/tools.xml $(wildcard $(srcdir)/*.1.xml) $(wildcard $(srcdi
 	| $(XSLTPROC) --nonet --path "$(srcdir)/..:$(xslstylesheetsdir)/manpages" --xinclude -o $@ man.xsl $<
 
 %: $(srcdir)/%.1.xml
-	echo $< $@
-	cat completion-template \
+	@echo $< $@
+	@cat completion-template \
 		| sed "s,ALLOPTS,\
 			$(shell sed -n 's,\s\s\s*<option>\([^<]*\)</option>.*,\1,pg' $< \
 				| sort -u | grep -- '^\-' | tr '\n' ' ')," \
