--- a/doc/tools/Makefile.am
+++ b/doc/tools/Makefile.am
@@ -1,5 +1,7 @@
 MAINTAINERCLEANFILES = $(srcdir)/Makefile.in
 
+EXTRA_DIST = completion-template
+
 dist_noinst_DATA = $(wildcard $(srcdir)/*.xml)
 if ENABLE_DOC
 html_DATA = tools.html
