--- a/win32/OpenSC.iss.in
+++ b/win32/OpenSC.iss.in
@@ -1,10 +1,10 @@
 [Setup]
-AppName=OpenSC
-AppVerName=OpenSC @PACKAGE_VERSION@
-AppPublisher=OpenSC Project
-AppPublisherURL=http://www.opensc-project.org/
-AppSupportURL=http://www.opensc-project.org/opensc/
-AppUpdatesURL=http://www.opensc-project.org/opensc/
+AppName=@OPENSC_VS_FF_PRODUCT_NAME@
+AppVerName=@OPENSC_VS_FF_PRODUCT_NAME@ @PACKAGE_VERSION@
+AppPublisher=@OPENSC_VS_FF_LEGAL_COMPANY_NAME@
+AppPublisherURL=@OPENSC_VS_FF_COMPANY_URL@
+AppSupportURL=@PRODUCT_BUGREPORT@
+AppUpdatesURL=@OPENSC_VS_FF_PRODUCT_UPDATES@
 DefaultDirName={pf}\OpenSC Project\OpenSC
 OutputBaseFilename=OpenSC-@PACKAGE_VERSION@
 Compression=lzma/normal
@@ -22,10 +22,10 @@ AppendDefaultDirName=false
 AppVersion=@PACKAGE_VERSION@
 VersionInfoVersion=@OPENSC_VERSION_MAJOR@.@OPENSC_VERSION_MINOR@.@OPENSC_VERSION_FIX@
 VersionInfoDescription=OpenSC tools and libraries
-VersionInfoTextVersion=v@PACKAGE_VERSION@
+VersionInfoTextVersion=@PACKAGE_VERSION@
 DisableReadyPage=true
 InternalCompressLevel=max
-VersionInfoCopyright=2010 OpenSC Project
+VersionInfoCopyright=@OPENSC_VS_FF_LEGAL_COPYRIGHT@
 DisableStartupPrompt=true
 AlwaysShowComponentsList=false
 ShowComponentSizes=false
@@ -42,11 +42,11 @@ DefaultGroupName=OpenSC
 [Tasks]
 
 [Files]
-Source: opensc\*.profile; DestDir: {app}\profiles
-Source: opensc\*.dll; DestDir: {sys}; Flags: overwritereadonly replacesameversion ignoreversion uninsnosharedfileprompt restartreplace
-Source: opensc\*.exe; DestDir: {app}; Flags: overwritereadonly replacesameversion ignoreversion
+Source: opensc\share\opensc\*.profile; DestDir: {app}\profiles
+Source: opensc\bin\*.dll; DestDir: {sys}; Flags: overwritereadonly replacesameversion ignoreversion uninsnosharedfileprompt restartreplace
+Source: opensc\bin\*.exe; DestDir: {app}; Flags: overwritereadonly replacesameversion ignoreversion
 Source: engine_pkcs11\*.dll; DestDir: {sys}; Components: OpenSSL_engine; Flags: overwritereadonly replacesameversion ignoreversion
-Source: opensc.conf; DestDir: {app};
+Source: opensc\etc\opensc.conf; DestDir: {app};
 ;Source: www.opensc-project.org.url; DestDir: {app}
 [Icons]
 ;Name: {group}\OpenSC Project website; Filename: {app}\www.opensc-project.org.url; Comment: Go to OpenSC Project website; Components:
