Removes obsolete windows installer files

--- a/win32/OpenSC.iss.in
+++ b/win32/OpenSC.iss.in
@@ -32,7 +32,7 @@ ShowComponentSizes=false
 FlatComponentsList=false
 WizardImageBackColor=clWhite
 DisableFinishedPage=false
-InfoBeforeFile=README.rtf
+InfoBeforeFile=license.rtf
 VersionInfoProductName=OpenSC
 VersionInfoProductVersion=@OPENSC_VERSION_MAJOR@.@OPENSC_VERSION_MINOR@.@OPENSC_VERSION_FIX@
 AllowRootDirectory=true
