--- a/win32/Makefile.am
+++ b/win32/Makefile.am
@@ -3,13 +3,9 @@ include $(top_srcdir)/win32/ltrc.inc
 MAINTAINERCLEANFILES = $(srcdir)/Makefile.in $(srcdir)/versioninfo.rc $(srcdir)/winconfig.h \
 		$(srcdir)/OpenSC.iss $(srcdir)/OpenSC.wxs $(srcdir)/OpenSC.ico $(srcdir)/license.rtf \
                 $(srcdir)/dlgbmp.bmp $(srcdir)/bannrbmp.bmp $(srcdir)/versioninfo-customactions.rc
-EXTRA_DIST = ltrc.inc Makefile.mak Make.rules.mak opensc-install.bat \
+EXTRA_DIST = ltrc.inc Makefile.mak Make.rules.mak \
 		versioninfo.rc.in winconfig.h.in OpenSC.iss.in OpenSC.wxs.in versioninfo-customactions.rc.in
 dist_noinst_HEADERS = versioninfo.rc winconfig.h OpenSC.iss OpenSC.wxs license.rtf OpenSC.ico dlgbmp.bmp bannrbmp.bmp
-
-if WIN32
-sbin_SCRIPTS = opensc-install.bat
-endif
 
 if ENABLE_MINIDRIVER
 lib_LTLIBRARIES = customactions@LIBRARY_BITNESS@.la
