--- a/win32/OpenSC.iss.in
+++ b/win32/OpenSC.iss.in
@@ -45,7 +45,7 @@ DefaultGroupName=OpenSC
 Source: opensc\share\opensc\*.profile; DestDir: {app}\profiles
 Source: opensc\bin\*.dll; DestDir: {sys}; Flags: overwritereadonly replacesameversion ignoreversion uninsnosharedfileprompt restartreplace
 Source: opensc\bin\*.exe; DestDir: {app}; Flags: overwritereadonly replacesameversion ignoreversion
-Source: engine_pkcs11\*.dll; DestDir: {sys}; Components: OpenSSL_engine; Flags: overwritereadonly replacesameversion ignoreversion
+;Source: engine_pkcs11\*.dll; DestDir: {sys}; Components: OpenSSL_engine; Flags: overwritereadonly replacesameversion ignoreversion
 Source: opensc\etc\opensc.conf; DestDir: {app};
 ;Source: www.opensc-project.org.url; DestDir: {app}
 [Icons]
@@ -54,6 +54,6 @@ Source: opensc\etc\opensc.conf; DestDir: {app};
 [Registry]
 Root: HKLM; Subkey: Software\OpenSC Project\OpenSC; ValueType: string; ValueName: ConfigFile; ValueData: {app}\opensc.conf; Flags: uninsdeletekey; Components:
 Root: HKLM; Subkey: Software\OpenSC Project\OpenSC; ValueType: string; ValueName: ProfileDir; ValueData: {app}\profiles; Flags: uninsdeletekey; Components:
-[Components]
-Name: OpenSC; Description: OpenSC core library; Flags: fixed; Types: custom compact full
-Name: OpenSSL_engine; Description: OpenSSL engine for using PKCS11 modules; Types: custom full
+;[Components]
+;Name: OpenSC; Description: OpenSC core library; Flags: fixed; Types: custom compact full
+;Name: OpenSSL_engine; Description: OpenSSL engine for using PKCS11 modules; Types: custom full
