--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,25 @@
-language: C
+language: c
 
-sudo: required
+sudo: false
+
+addons:
+  apt_packages:
+    - binutils-mingw-w64-i686
+    - binutils-mingw-w64-x86-64
+    - docbook-xsl
+    - gcc-mingw-w64-i686
+    - gcc-mingw-w64-x86-64
+    - libpcsclite-dev
+    - mingw-w64
+    - wine
+    - xsltproc
+  coverity_scan:
+    project:
+      name: "OpenSC/OpenSC"
+      description: "Build submitted via Travis CI"
+    notification_email: viktor.tarasov@gmail.com
+    build_command:   "make -j 4"
+    branch_pattern: coverity_scan
 
 env:
   global:
@@ -25,47 +44,21 @@ matrix:
     - os: linux
       env: HOST=i686-w64-mingw32
 
-before_install:
-  - if [ $TRAVIS_OS_NAME == linux ]; then
-      sudo apt-get update || true;
-      if [ ! -z "$HOST" ]; then
-        export DISPLAY=:99.0;
-        sudo /etc/init.d/xvfb start;
-        /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16;
-      fi
-    fi
-
-install:
-  - if [ $TRAVIS_OS_NAME == linux ]; then
-      if [ -z "$HOST" ]; then
-        sudo apt-get install libpcsclite-dev xsltproc docbook-xsl;
-      elif [ "${HOST}" == i686-w64-mingw32 ]; then
-        sudo apt-get install wine mingw-w64 binutils-mingw-w64-i686 gcc-mingw-w64-i686;
-      elif [ "${HOST}" == x86_64-w64-mingw32 ]; then
-        sudo apt-get install wine mingw-w64 binutils-mingw-w64-x86-64 gcc-mingw-w64-x86-64;
-      fi
-    fi
-
 before_script:
   - ./bootstrap
   - if [ -z "$HOST" ]; then
       ./configure $ENABLE_DOC --enable-dnie-ui;
     else
-      wget http://files.jrsoftware.org/is/5/isetup-5.5.6.exe;
-      wine isetup-5.5.6.exe /SILENT /VERYSILENT /SP- /SUPPRESSMSGBOXES /NORESTART;
+      if [ ! -f "$(winepath 'C:/Program Files (x86)/Inno Setup 5/ISCC.exe')" ]; then
+        /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16;
+        export DISPLAY=:99.0;
+        wget http://files.jrsoftware.org/is/5/isetup-5.5.6.exe;
+        wine isetup-5.5.6.exe /SILENT /VERYSILENT /SP- /SUPPRESSMSGBOXES /NORESTART;
+      fi;
       unset CC;
       unset CXX;
-      ./configure --host=$HOST --disable-openssl --prefix=${TRAVIS_BUILD_DIR}/win32/opensc;
+      ./configure --host=$HOST --disable-openssl --disable-readline --disable-zlib --prefix=${TRAVIS_BUILD_DIR}/win32/opensc || cat config.log;
     fi
-
-addons:
-  coverity_scan:
-    project:
-      name: "OpenSC/OpenSC"
-      description: "Build submitted via Travis CI"
-    notification_email: viktor.tarasov@gmail.com
-    build_command:   "make -j 4"
-    branch_pattern: coverity_scan
 
 script:
   - if [ "${COVERITY_SCAN_BRANCH}" != 1 ]; then
@@ -83,3 +76,5 @@ script:
       make install;
       wine "C:/Program Files (x86)/Inno Setup 5/ISCC.exe" win32/OpenSC.iss;
     fi
+
+cache: ccache
