--- a/win32/OpenSC.wxs.in
+++ b/win32/OpenSC.wxs.in
@@ -123,6 +123,12 @@
               <Component Id="pkcs11_tool.exe" Guid="*" Win64="$(var.Win64YesNo)">
                 <File Source="$(var.SOURCE_DIR)\src\tools\pkcs11-tool.exe" Vital="yes"/>
               </Component>
+              <Component Id="cardos_tool.exe" Guid="*" Win64="$(var.Win64YesNo)">
+                <File Source="$(var.SOURCE_DIR)\src\tools\cardos-tool.exe" Vital="yes"/>
+              </Component>
+              <Component Id="eidenv.exe" Guid="*" Win64="$(var.Win64YesNo)">
+                <File Source="$(var.SOURCE_DIR)\src\tools\eidenv.exe" Vital="yes"/>
+              </Component>
               <Component Id="pkcs15_init.exe" Guid="*" Win64="$(var.Win64YesNo)">
                 <File Source="$(var.SOURCE_DIR)\src\tools\pkcs15-init.exe" Vital="yes"/>
               </Component>
@@ -141,8 +147,44 @@
               <Component Id="openpgp_tool.exe" Guid="*" Win64="$(var.Win64YesNo)">
                 <File Source="$(var.SOURCE_DIR)\src\tools\openpgp-tool.exe" Vital="yes"/>
               </Component>
+              <Component Id="iasecc_tool.exe" Guid="*" Win64="$(var.Win64YesNo)">
+                <File Source="$(var.SOURCE_DIR)\src\tools\iasecc-tool.exe" Vital="yes"/>
+              </Component>
+              <Component Id="cryptoflex_tool.exe" Guid="*" Win64="$(var.Win64YesNo)">
+                <File Source="$(var.SOURCE_DIR)\src\tools\cryptoflex-tool.exe" Vital="yes"/>
+              </Component>
+              <Component Id="netkey_tool.exe" Guid="*" Win64="$(var.Win64YesNo)">
+                <File Source="$(var.SOURCE_DIR)\src\tools\netkey-tool.exe" Vital="yes"/>
+              </Component>
+              <Component Id="piv_tool.exe" Guid="*" Win64="$(var.Win64YesNo)">
+                <File Source="$(var.SOURCE_DIR)\src\tools\piv-tool.exe" Vital="yes"/>
+              </Component>
+              <Component Id="westcos_tool.exe" Guid="*" Win64="$(var.Win64YesNo)">
+                <File Source="$(var.SOURCE_DIR)\src\tools\westcos-tool.exe" Vital="yes"/>
+              </Component>
             </Directory>
             <Directory Id="INSTALLDIR_PROFILES" Name="profiles">
+              <Component Id="cyberflex.profile" Guid="*" Win64="$(var.Win64YesNo)">
+                <File Source="$(var.SOURCE_DIR)\src\pkcs15init\cyberflex.profile"/>
+              </Component>
+              <Component Id="flex.profile" Guid="*" Win64="$(var.Win64YesNo)">
+                <File Source="$(var.SOURCE_DIR)\src\pkcs15init\flex.profile"/>
+              </Component>
+              <Component Id="gpk.profile" Guid="*" Win64="$(var.Win64YesNo)">
+                <File Source="$(var.SOURCE_DIR)\src\pkcs15init\gpk.profile"/>
+              </Component>
+              <Component Id="miocos.profile" Guid="*" Win64="$(var.Win64YesNo)">
+                <File Source="$(var.SOURCE_DIR)\src\pkcs15init\miocos.profile"/>
+              </Component>
+              <Component Id="incrypto34.profile" Guid="*" Win64="$(var.Win64YesNo)">
+                <File Source="$(var.SOURCE_DIR)\src\pkcs15init\incrypto34.profile"/>
+              </Component>
+              <Component Id="jcop.profile" Guid="*" Win64="$(var.Win64YesNo)">
+                <File Source="$(var.SOURCE_DIR)\src\pkcs15init\jcop.profile"/>
+              </Component>
+              <Component Id="muscle.profile" Guid="*" Win64="$(var.Win64YesNo)">
+                <File Source="$(var.SOURCE_DIR)\src\pkcs15init\muscle.profile"/>
+              </Component>
               <Component Id="pkcs15.profile" Guid="*" Win64="$(var.Win64YesNo)">
                 <File Source="$(var.SOURCE_DIR)\src\pkcs15init\pkcs15.profile"/>
               </Component>
@@ -246,17 +288,29 @@
       </Feature>
       <!-- Tools and profiles are for personalization -->
       <Feature Id="OpenSC_tools" Level="1" Title="Tools and profiles" Description="Tools for debugging and personalization. Includes profiles needed for running pkcs15-init.exe">
-        <!-- TODO: Not all tools and utilities are listed! -->
         <ComponentRef Id="opensc_explorer.exe"/>
         <ComponentRef Id="opensc_tool.exe"/>
         <ComponentRef Id="pkcs11_tool.exe"/>
+        <ComponentRef Id="cardos_tool.exe"/>
+        <ComponentRef Id="eidenv.exe"/>
         <ComponentRef Id="pkcs15_init.exe"/>
         <ComponentRef Id="dnie_tool.exe"/>
         <ComponentRef Id="pkcs15_tool.exe"/>
         <ComponentRef Id="pkcs15_crypt.exe"/>
         <ComponentRef Id="sc_hsm_tool.exe"/>
         <ComponentRef Id="openpgp_tool.exe"/>
-        <!-- TODO: Not all profiles are listed! -->
+        <ComponentRef Id="iasecc_tool.exe"/>
+        <ComponentRef Id="cryptoflex_tool.exe"/>
+        <ComponentRef Id="netkey_tool.exe"/>
+        <ComponentRef Id="piv_tool.exe"/>
+        <ComponentRef Id="westcos_tool.exe"/>
+        <ComponentRef Id="cyberflex.profile"/>
+        <ComponentRef Id="flex.profile"/>
+        <ComponentRef Id="gpk.profile"/>
+        <ComponentRef Id="miocos.profile"/>
+        <ComponentRef Id="incrypto34.profile"/>
+        <ComponentRef Id="jcop.profile"/>
+        <ComponentRef Id="muscle.profile"/>
         <ComponentRef Id="pkcs15.profile"/>
         <ComponentRef Id="asepcos.profile"/>
         <ComponentRef Id="cardos.profile"/>
