--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,17 +1,30 @@
 version: 0.15.0.{build}
 
 platform:
-  # the prebuilt zlib is 32 bit only
   - x86
+  - x64
 
 configuration:
   - Release
   - Debug
+  - Light-Release
+  - Light-Debug
 
 environment:
   matrix:
     - VSVER: 12
     - VSVER: 10
+
+matrix:
+  allow_failures:
+    # the prebuilt zlib is 32 bit only
+    - platform: x64
+      configuration: Debug
+    - platform: x64
+      configuration: Release
+    # not included in AppVeyor right now
+    - platform: x64
+      VSVER: 10
 
 install:
   - ps: if ($env:APPVEYOR_PULL_REQUEST_NUMBER -and $env:APPVEYOR_BUILD_NUMBER -ne ((Invoke-RestMethod `
@@ -37,22 +50,24 @@ install:
         $env:ARTIFACT="OpenSC-${env:APPVEYOR_BUILD_VERSION}-win64_vs${env:VSVER}-${env:CONFIGURATION}.msi"
       }
   - ps: >-
-      If ($env:Configuration -Match "Debug") {
-        $env:NMAKE_DEBUG="DEBUG_DEF=/DDEBUG"
+      If ($env:Configuration -Like "*Debug*") {
+        $env:NMAKE_EXTRA="DEBUG_DEF=/DDEBUG ${env:NMAKE_EXTRA}"
+      }
+  - ps: >-
+      If (!($env:Configuration -Like "*Light*")) {
+        If (!(Test-Path -Path "C:\OpenSSL-${env:OPENSSL_PF}" )) {
+          Start-FileDownload https://slproweb.com/download/${env:OPENSSL_PF}OpenSSL-${env:OPENSSL_VER}.exe -FileName C:\WinOpenSSL.exe
+          C:\WinOpenSSL.exe /SILENT /VERYSILENT /SP- /SUPPRESSMSGBOXES /NORESTART
+        }
+        If (!(Test-Path -Path "C:\zlib-dll" )) {
+          appveyor DownloadFile "https://prdownloads.sourceforge.net/libpng/zlib${env:ZLIB_VER}-dll.zip" -FileName zlib-dll.zip
+          7z x zlib-dll.zip -oC:\zlib-dll
+        }
+        $env:NMAKE_EXTRA="OPENSSL_DEF=/DENABLE_OPENSSL ZLIB_DEF=/DENABLE_ZLIB ${env:NMAKE_EXTRA}"
       }
   - ps: $env:VSCOMNTOOLS=(Get-Content ("env:VS" + "$env:VSVER" + "0COMNTOOLS"))
   - echo "Using Visual Studio %VSVER%.0 at %VSCOMNTOOLS%"
   - call "%VSCOMNTOOLS%\..\..\VC\vcvarsall.bat" %VCVARS_PLATFORM%
-  - ps: >-
-      If(!(Test-Path -Path "C:\OpenSSL-${env:OPENSSL_PF}" )) {
-          Start-FileDownload https://slproweb.com/download/${env:OPENSSL_PF}OpenSSL-${env:OPENSSL_VER}.exe -FileName C:\WinOpenSSL.exe
-          C:\WinOpenSSL.exe /SILENT /VERYSILENT /SP- /SUPPRESSMSGBOXES /NORESTART
-        }
-  - ps: >-
-      If(!(Test-Path -Path "C:\zlib-dll" )) {
-          appveyor DownloadFile "https://prdownloads.sourceforge.net/libpng/zlib${env:ZLIB_VER}-dll.zip" -FileName zlib-dll.zip
-          7z x zlib-dll.zip -oC:\zlib-dll
-      }
   - appveyor DownloadFile "http://download.microsoft.com/download/2/C/9/2C93059C-0532-42DF-8C24-9AEAFF00768E/cngsdk.msi"
   - cngsdk.msi /quiet
   - uname -a
@@ -62,8 +77,8 @@ build_script:
   # disable features to speed up the script
   - bash -c "exec 0</dev/null && ./configure --disable-openssl --disable-readline --disable-zlib || cat config.log"
   - cp win32/winconfig.h config.h
-  - nmake /f Makefile.mak %NMAKE_ARCH% %NMAKE_DEBUG%
-  - cd win32 && nmake /f Makefile.mak %NMAKE_ARCH% %NMAKE_DEBUG% VSVER=%VSVER% OpenSC.msi
+  - nmake /f Makefile.mak %NMAKE_ARCH% %NMAKE_EXTRA%
+  - cd win32 && nmake /f Makefile.mak %NMAKE_ARCH% %NMAKE_EXTRA% VSVER=%VSVER% OpenSC.msi
   - move OpenSC.msi %ARTIFACT%
   - appveyor PushArtifact %ARTIFACT%
 
