--- a/win32/OpenSC.wxs.in
+++ b/win32/OpenSC.wxs.in
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="windows-1252"?>
 <?if $(var.Platform) = x64 ?>
-  <?ifdef OpenSSL ?>
-    <?define ProductName = "@OPENSC_VS_FF_PRODUCT_NAME@ (64bit)" ?>
-  <?else ?>
+  <?ifdef Light ?>
     <?define ProductName = "@OPENSC_VS_FF_PRODUCT_NAME@ Light (64bit)" ?>
+  <?else ?>
+    <?define ProductName = "@OPENSC_VS_FF_PRODUCT_NAME@ (64bit)" ?>
   <?endif ?>
   <?define Win64YesNo="yes" ?>
   <?define PlatformProgramFilesFolder = "ProgramFiles64Folder" ?>
   <?define PlatformSystemFolder = "System64Folder" ?>
   <?define PlatformUpgradeCode = "{9A449570-69A2-11E0-9CC6-955B4824019B}" ?>
 <?else ?>
-  <?ifdef OpenSSL ?>
-    <?define ProductName = "@OPENSC_VS_FF_PRODUCT_NAME@" ?>
-  <?else ?>
+  <?ifdef Light ?>
     <?define ProductName = "@OPENSC_VS_FF_PRODUCT_NAME@ Light" ?>
+  <?else ?>
+    <?define ProductName = "@OPENSC_VS_FF_PRODUCT_NAME@" ?>
   <?endif ?>
   <?define Win64YesNo="no" ?>
   <?define PlatformProgramFilesFolder = "ProgramFilesFolder" ?>
@@ -119,9 +119,6 @@
               <Component Id="opensc.dll" Guid="*" Win64="$(var.Win64YesNo)">
                 <File Source="$(var.SOURCE_DIR)\src\libopensc\opensc.dll" Vital="yes"/>
               </Component>
-              <Component Id="smm_local.dll" Guid="*" Win64="$(var.Win64YesNo)">
-                <File Source="$(var.SOURCE_DIR)\src\smm\smm-local.dll" Vital="yes"/>
-              </Component>
               <Component Id="opensc_explorer.exe" Guid="*" Win64="$(var.Win64YesNo)">
                 <File Source="$(var.SOURCE_DIR)\src\tools\opensc-explorer.exe" Vital="yes"/>
               </Component>
@@ -149,7 +146,10 @@
               <Component Id="iasecc_tool.exe" Guid="*" Win64="$(var.Win64YesNo)">
                 <File Source="$(var.SOURCE_DIR)\src\tools\iasecc-tool.exe" Vital="yes"/>
               </Component>
-              <?ifdef OpenSSL ?>
+              <?ifndef Light ?>
+                <Component Id="smm_local.dll" Guid="*" Win64="$(var.Win64YesNo)">
+                  <File Source="$(var.SOURCE_DIR)\src\smm\smm-local.dll" Vital="yes"/>
+                </Component>
                 <Component Id="cryptoflex_tool.exe" Guid="*" Win64="$(var.Win64YesNo)">
                   <File Source="$(var.SOURCE_DIR)\src\tools\cryptoflex-tool.exe" Vital="yes"/>
                 </Component>
@@ -173,7 +173,7 @@
                 </Component>
               <?endif ?>
             </Directory>
-            <?ifdef OpenSSL ?>
+            <?ifndef Light ?>
               <Directory Id="INSTALLDIR_PROFILES" Name="profiles">
                 <Component Id="cyberflex.profile" Guid="*" Win64="$(var.Win64YesNo)">
                   <File Source="$(var.SOURCE_DIR)\src\pkcs15init\cyberflex.profile"/>
@@ -285,7 +285,9 @@
       <Feature Id="OpenSC_core" Level="1" Title="OpenSC core library" Description="Core DLL and configuration file used by all other components." Absent="disallow">
         <ComponentRef Id="opensc.dll"/>
         <ComponentRef Id="opensc.conf"/>
-        <ComponentRef Id="smm_local.dll"/>
+        <?ifndef Light ?>
+          <ComponentRef Id="smm_local.dll"/>
+        <?endif ?>
       </Feature>
       <Feature Id="OpenSC_pkcs11" Level="1" Title="OpenSC PKCS#11 module" Description="PKCS#11 module usd by most open source and cross-platform software (like Firefox, Putty, TrueCrypt, OpenVPN etc)" TypicalDefault="install">
         <ComponentRef Id="opensc_pkcs11.dll"/>
@@ -309,7 +311,7 @@
         <ComponentRef Id="pkcs15_crypt.exe"/>
         <ComponentRef Id="openpgp_tool.exe"/>
         <ComponentRef Id="iasecc_tool.exe"/>
-        <?ifdef OpenSSL ?>
+        <?ifndef Light ?>
           <ComponentRef Id="cryptoflex_tool.exe"/>
           <ComponentRef Id="pkcs15_init.exe"/>
           <ComponentRef Id="netkey_tool.exe"/>
